[project]
name = "pydna-interactive-utils"
version = "0.1.0"
description = "Functions to ease using pydna interactively"
authors = [
    {name = "BjornFJohansson",email = "bjornjobb@gmail.com"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydna (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"
[tool.poetry-dynamic-versioning.substitution]
files = ["src/pydna-interactive-utils/__init__.py"]
